Processo de carga de cidades.

--- a/pasta_python/teste.ipynb
+++ b/pasta_python/teste.ipynb
@@ -7,10 +7,20 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import json\n",
     "from datetime import timedelta, date, time, datetime\n",
     "#import datetime\n",
     "from random import randint\n",
     "dados = pd.read_csv('grupos.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('..cep.json', 'r')"
    ]
   },
   {
